[build-system]
requires = ["setuptools >= 65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firebird-base"
version = "1.6.0"
description = "Firebird base modules for Python"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Pavel Císař", email = "pcisar@users.sourceforge.net"}]
keywords = ["Firebird"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Software Development",
    ]
dependencies = [
    "protobuf>=4.21.0, <5",
    ]

[project.urls]
Home = "https://github.com/FirebirdSQL/python3-base"
Documentation = "https://firebird-base.rtfd.io"
"Bug Reports" = "https://github.com/FirebirdSQL/python3-base/issues"
Funding = "https://www.firebirdsql.org/en/donate/"
Source = "https://github.com/FirebirdSQL/python3-base"

[project.entry-points."firebird.base.protobuf"]
"firebird.base.config" = "firebird.base.config_pb2:DESCRIPTOR"

[tool.setuptools]
zip-safe = true

